--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,8 +1,9 @@
 article.Card {
     border: olive solid 2px;
     width: 100%;
-    height: 160px;
-    
+    height: min-content ;
+    margin: 0.2vw;
     box-sizing: border-box;
     display: block;
+    padding: 6%;
 }
