--- a/src/styles/List.module.css
+++ b/src/styles/List.module.css
@@ -1,10 +1,10 @@
 article.List {
 
-    border: red solid 2px;
-    flex-basis: 13vw;
-    flex-grow: 2;
+    border: blanchedalmond 2px;
+    border-style: groove;
+    flex-basis: 180px;
     margin: 2vw;
-    box-sizing: content-box;
     padding:0.6vw;
-    width: min-content;
+    flex-shrink: 120px;
+
 }
